# django_clean_architecture

./: pyproject.toml  start
.data/rest/: http-client.env.json  rest-api.http
config/: settings.py  urls.py
src/auth/application/reader/: user_reader.py
src/auth/application/use_case/: authenticate_user.py
src/auth/domain/: model.py  repository.py
src/auth/infrastructure/: apps.py  factory.py
src/auth/infrastructure/auth/: __init__.py  access_token_creator.py  api_authenticated_router.py  http_api_request.py  token.py  token_authenticator.py
src/auth/infrastructure/persistence/database/: models.py  repository.py
src/auth/infrastructure/persistence/database/migrations/: 0001_initial.py
src/auth/infrastructure/persistence/in_memory/: repository.py
src/auth/infrastructure/ui/api/: __init__.py  login.py
src/auth/tests/acceptance/: test_login.py
src/auth/tests/application/use_case/: test_authenticate_user.py
src/demo/application/use_case/: add.py
src/demo/infrastructure/: factory.py
src/demo/infrastructure/ui/api/: __init__.py  api.py
src/messenger/: __init__.py  facade.py
src/messenger/application/message_bus/: command.py  event.py  query.py
src/messenger/infrastructure/: factory.py
src/messenger/infrastructure/message_bus/: simple_command_bus.py  simple_event_bus.py  simple_query_bus.py
src/messenger/tests/infrastructure/message_bus/: fixtures.py  simple_command_bus_test.py  simple_event_bus_test.py  simple_query_bus_test.py
